--- a/calculator.css
+++ b/calculator.css
@@ -22,6 +22,7 @@ input {
     font-size: 30px;
     font-weight: bold;
     background-color: #AAB7B8;
+    width: 400px;
 }
 
 .table-style tbody tr td{
@@ -45,5 +46,9 @@ input {
 }
 
 .operator{
+    background-color: #616A6B;
+}
+
+.kali{
     background-color: #616A6B;
 }
